# open_model_zoo

demos/: CMakeLists.txt  cmake_install.cmake
demos/background_removal_demo/cpp/: CMakeLists.txt  background_removal_demo.vcxproj  background_removal_demo.vcxproj.filters  cmake_install.cmake  main.cpp
demos/background_removal_demo/cpp/background_removal_demo.dir/RelWithDebInfo/: background_removal_demo.exe.recipe  background_removal_demo.ilk
demos/background_removal_demo/cpp/background_removal_demo.dir/RelWithDebInfo/backgrou.E2E82DEF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  background_removal_demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
demos/background_removal_demo/cpp/background_removal_demo.dir/Release/: background_removal_demo.exe.recipe
demos/background_removal_demo/cpp/background_removal_demo.dir/Release/backgrou.E2E82DEF.tlog/: CL.command.1.tlog  CL.write.1.tlog  background_removal_demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
demos/background_removal_demo/python/: background_removal_demo.py
demos/benchmark_app/cpp/: CMakeLists.txt  README.md  benchmark_app.hpp  main.cpp  utils.cpp
demos/classification_benchmark_demo/cpp/: grid_mat.hpp  main.cpp
demos/classification_demo/cpp/: grid_mat.hpp  main.cpp
demos/common/cpp/: CMakeLists.txt
demos/common/cpp/format_reader/: CMakeLists.txt
demos/common/cpp/ie_samples_utils/: CMakeLists.txt
demos/common/cpp/ittutils/: ittutils.h
demos/common/cpp/models/include/models/: classification_model.h  detection_model_yolo.h  model_base.h  segmentation_model.h
demos/common/cpp/models/src/: classification_model.cpp  detection_model_yolo.cpp  image_model.cpp  model_base.cpp  segmentation_model.cpp
demos/common/cpp/pipelines/include/pipelines/: async_pipeline.h
demos/common/cpp/pipelines/src/: async_pipeline.cpp
demos/common/cpp/utils/include/utils/: ocv_common.hpp  slog.hpp
demos/common/cpp_gapi/: cmake_install.cmake
demos/common/cpp_gapi/utils_gapi/: cmake_install.cmake  utils_gapi.vcxproj  utils_gapi.vcxproj.filters
demos/common/cpp_gapi/utils_gapi/utils_gapi.dir/RelWithDebInfo/: utils_gapi.lib.recipe
demos/common/cpp_gapi/utils_gapi/utils_gapi.dir/RelWithDebInfo/utils_gapi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  utils_gapi.lastbuildstate
demos/common/cpp_gapi/utils_gapi/utils_gapi.dir/Release/: utils_gapi.lib.recipe
demos/common/cpp_gapi/utils_gapi/utils_gapi.dir/Release/utils_gapi.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  utils_gapi.lastbuildstate
demos/obs_plugins/: CMakeLists.txt  FindLibObs.cmake  plugin-macros.h.in
demos/obs_plugins/obs-opencv-smart-framing/: CMakeLists.txt  custom_kernels.cpp  plugin-main.cpp  smart-framing-filter-ocv.cpp
demos/obs_plugins/obs-openvino-background-removal/: CMakeLists.txt  background-filter-ov.cpp  openvino-background-removal.cpp  plugin-main.cpp
demos/obs_plugins/obs-openvino-gaze-correction/: CMakeLists.txt  gaze-correction-filter-ov.cpp  plugin-main.cpp
demos/smart_framing_demo/cpp_gapi/: CMakeLists.txt  cmake_install.cmake  main.cpp  smart_framing_demo_gapi.vcxproj  smart_framing_demo_gapi.vcxproj.filters
demos/smart_framing_demo/cpp_gapi/smart_framing_demo_gapi.dir/RelWithDebInfo/: smart_framing_demo_gapi.exe.recipe  smart_framing_demo_gapi.ilk
demos/smart_framing_demo/cpp_gapi/smart_framing_demo_gapi.dir/RelWithDebInfo/smart_fr.7A5A2D56.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  smart_framing_demo_gapi.lastbuildstate
demos/smart_framing_demo/cpp_gapi/smart_framing_demo_gapi.dir/Release/: smart_framing_demo_gapi.exe.recipe
demos/smart_framing_demo/cpp_gapi/smart_framing_demo_gapi.dir/Release/smart_fr.7A5A2D56.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  smart_framing_demo_gapi.lastbuildstate
